Feat Filter Event and payment gateway
