# src/docs/swagger_output.json
@@ -668,24 +668,55 @@
             }
           },
           {
-            "name": "limit",
+            "name": "search",
             "in": "query",
             "schema": {
               "type": "string"
+            }
+          },
+          {
+            "name": "category",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "description": "Limit jumlah data yang ditampilkan",
+            "required": false,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "number"
+                },
+                "default": {
+                  "type": "number",
+                  "example": 10
+                }
+              }
             }
           },
           {
             "name": "page",
             "in": "query",
+            "description": "Halaman yang ingin ditampilkan",
+            "required": false,
             "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "search",
-            "in": "query",
-            "schema": {
-              "type": "string"
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "number"
+                },
+                "default": {
+                  "type": "number",
+                  "example": 1
+                }
+              }
             }
           },
           {
