# src/models/event.model.ts
@@ -26,9 +26,9 @@ export const eventDAO = Yup.object({
     }).required(),
 });
 
-export type TEvent = Yup.InferType<typeof eventDAO>;
+export type TypeEvent = Yup.InferType<typeof eventDAO>;
 
-export interface Event extends Omit<TEvent, "category" | "createdBy"> {
+export interface Event extends Omit<TypeEvent, "category" | "createdBy"> {
     category: ObjectId;
     createdBy: ObjectId;
 }
